--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,20 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <title>みんなが気になること♪</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7N5L2Z6S3X"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7N5L2Z6S3X");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
